# starship-multi-config

./: Cargo.toml  DESIGN.md  PLAN.md  README.md  dprint.json  hk.pkl  mise.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  claude.yml  release.yml
.zed/: settings.json
src/: main.rs
src/snapshots/: starship_multi_config__tests__array_replacement.snap  starship_multi_config__tests__nested_table_merge_with_scalar_override.snap
tests/: cli.rs
tests/snapshots/: cli__glob_expansion.snap  cli__merge_two_files.snap  cli__multiple_presets.snap  cli__preset_only.snap  cli__preset_with_user_config.snap
