[package]
name = "starship_multi_config"
version = "0.0.0-dev"
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["terminal", "shell", "prompt"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/sargunv/starship-multi-config"
description = "Wrapper for Starship that deep-merges multiple TOML configs"

[[bin]]
name = "starship-multi-config"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
dirs = "6.0.0"
expand-tilde = "0.6.1"
glob = "0.3"
tempfile = "3"
toml = "1"
which = "8"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3.1.4"
tempfile = "3"
